feat: add API get drone plan
